// Vitest Snapshot v1

exports[`renders with a song 1`] = `
<div class="middle-pane" data-testid="footer-middle-pane" data-v-77c679f2="">
  <div id="progressPane" class="progress" data-v-77c679f2="">
    <h3 class="title" data-v-77c679f2="">Fahrstuhl to Heaven</h3>
    <p class="meta" data-v-77c679f2=""><a href="/#/artist/3" class="artist" data-v-77c679f2="">Led Zeppelin</a> – <a href="/#/album/4" class="album" data-v-77c679f2="">Led Zeppelin IV</a></p>
    <div class="plyr" data-v-77c679f2=""><audio controls="" crossorigin="anonymous" data-v-77c679f2=""></audio></div>
  </div>
</div>
`;

exports[`renders without a song 1`] = `
<div class="middle-pane" data-testid="footer-middle-pane" data-v-77c679f2="">
  <div id="progressPane" class="progress" data-v-77c679f2="">
    <!--v-if-->
    <div class="plyr" data-v-77c679f2=""><audio controls="" crossorigin="anonymous" data-v-77c679f2=""></audio></div>
  </div>
</div>
`;
